# recamera-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/recamera/: Cargo.toml
crates/recamera-camera/: Cargo.toml
crates/recamera-camera/src/: lib.rs
crates/recamera-config/: Cargo.toml
crates/recamera-config/src/: lib.rs
crates/recamera-core/: Cargo.toml
crates/recamera-core/src/: error.rs  lib.rs  types.rs
crates/recamera-cvi-sys/: Cargo.toml  build.rs
crates/recamera-cvi-sys/src/: bindings.rs  lib.rs  loader.rs
crates/recamera-infer/src/: lib.rs
crates/recamera-logging/: Cargo.toml
crates/recamera-logging/src/: lib.rs
crates/recamera-rs485/: Cargo.toml
crates/recamera-rs485/src/: lib.rs
crates/recamera-storage/: Cargo.toml
crates/recamera-storage/src/: lib.rs
crates/recamera-system/: Cargo.toml
crates/recamera-system/src/: lib.rs
crates/recamera-uart/: Cargo.toml
crates/recamera-uart/src/: lib.rs
docs/: MAINTAINER.md
docs/superpowers/plans/: 2026-03-27-recamera-rs-implementation.md
docs/superpowers/specs/: 2026-03-27-recamera-rs-sdk-design.md
scripts/: generate-bindings.sh
