[package]
name = "recamera-rs485"
description = "RS-485 helpers for the recamera SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
recamera-core = { path = "../recamera-core" }
recamera-uart = { path = "../recamera-uart" }
